// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button disabled 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #ffffff;
  background-color: #8f9397;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus {
  outline: none;
}

.c1 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #8f9397;
  background-color: #ffffff;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
}

.c1::-moz-focus-inner {
  border: 0;
}

.c1:focus {
  outline: none;
}

.c2 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #8f9397;
  background-color: #f8f9fb;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
}

.c2::-moz-focus-inner {
  border: 0;
}

.c2:focus {
  outline: none;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #8f9397;
  background-color: #ffeeac;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
}

.c3::-moz-focus-inner {
  border: 0;
}

.c3:focus {
  outline: none;
}

.c4 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #ffffff;
  background-color: #87defc;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
}

.c4::-moz-focus-inner {
  border: 0;
}

.c4:focus {
  outline: none;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #ffffff;
  background-color: #ff9f9a;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
}

.c5::-moz-focus-inner {
  border: 0;
}

.c5:focus {
  outline: none;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #ffffff;
  background-color: #82e2b5;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
}

.c6::-moz-focus-inner {
  border: 0;
}

.c6:focus {
  outline: none;
}

.c7 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #ffffff;
  background-color: #ffd480;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
}

.c7::-moz-focus-inner {
  border: 0;
}

.c7:focus {
  outline: none;
}

<div>
  <button
    className="c0"
    color="black"
    disabled={true}
  />
  <button
    className="c1"
    color="white"
    disabled={true}
  />
  <button
    className="c2"
    color="light"
    disabled={true}
  />
  <button
    className="c3"
    color="primary"
    disabled={true}
  />
  <button
    className="c4"
    color="info"
    disabled={true}
  />
  <button
    className="c5"
    color="danger"
    disabled={true}
  />
  <button
    className="c6"
    color="success"
    disabled={true}
  />
  <button
    className="c7"
    color="warning"
    disabled={true}
  />
</div>
`;

exports[`Button with color 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #ffffff;
  background-color: #1e272e;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
}

.c0:hover {
  cursor: pointer;
  background-color: #1d252c;
}

.c0:focus {
  box-shadow: 0px 0px 0px 2px #bcbec0;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus {
  outline: none;
}

.c1 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #1e272e;
  background-color: #ffffff;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
}

.c1:hover {
  cursor: pointer;
  background-color: #f2f2f2;
}

.c1:focus {
  box-shadow: 0px 0px 0px 2px #f2f2f2;
}

.c1::-moz-focus-inner {
  border: 0;
}

.c1:focus {
  outline: none;
}

.c2 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #1e272e;
  background-color: #f1f2f6;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
}

.c2:hover {
  cursor: pointer;
  background-color: #e5e6ea;
}

.c2:focus {
  box-shadow: 0px 0px 0px 2px #e5e6ea;
}

.c2::-moz-focus-inner {
  border: 0;
}

.c2:focus {
  outline: none;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #1e272e;
  background-color: #ffdd59;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
}

.c3:hover {
  cursor: pointer;
  background-color: #f2d255;
}

.c3:focus {
  box-shadow: 0px 0px 0px 2px #f2d255;
}

.c3::-moz-focus-inner {
  border: 0;
}

.c3:focus {
  outline: none;
}

.c4 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #ffffff;
  background-color: #0fbcf9;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
}

.c4:hover {
  cursor: pointer;
  background-color: #0eb3ed;
}

.c4:focus {
  box-shadow: 0px 0px 0px 2px #b7ebfd;
}

.c4::-moz-focus-inner {
  border: 0;
}

.c4:focus {
  outline: none;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #ffffff;
  background-color: #ff3f34;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
}

.c5:hover {
  cursor: pointer;
  background-color: #f23c31;
}

.c5:focus {
  box-shadow: 0px 0px 0px 2px #ffc5c2;
}

.c5::-moz-focus-inner {
  border: 0;
}

.c5:focus {
  outline: none;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #ffffff;
  background-color: #05c46b;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
}

.c6:hover {
  cursor: pointer;
  background-color: #05ba66;
}

.c6:focus {
  box-shadow: 0px 0px 0px 2px #b4edd3;
}

.c6::-moz-focus-inner {
  border: 0;
}

.c6:focus {
  outline: none;
}

.c7 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #ffffff;
  background-color: #ffa801;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
}

.c7:hover {
  cursor: pointer;
  background-color: #f2a001;
}

.c7:focus {
  box-shadow: 0px 0px 0px 2px #ffe5b3;
}

.c7::-moz-focus-inner {
  border: 0;
}

.c7:focus {
  outline: none;
}

<div>
  <button
    className="c0"
    color="black"
  />
  <button
    className="c1"
    color="white"
  />
  <button
    className="c2"
    color="light"
  />
  <button
    className="c3"
    color="primary"
  />
  <button
    className="c4"
    color="info"
  />
  <button
    className="c5"
    color="danger"
  />
  <button
    className="c6"
    color="success"
  />
  <button
    className="c7"
    color="warning"
  />
</div>
`;

exports[`Button with margin 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #1e272e;
  background-color: #ffdd59;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
  margin: 0.375rem;
}

.c0:hover {
  cursor: pointer;
  background-color: #f2d255;
}

.c0:focus {
  box-shadow: 0px 0px 0px 2px #f2d255;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus {
  outline: none;
}

.c1 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #1e272e;
  background-color: #ffdd59;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
  margin: 32px;
}

.c1:hover {
  cursor: pointer;
  background-color: #f2d255;
}

.c1:focus {
  box-shadow: 0px 0px 0px 2px #f2d255;
}

.c1::-moz-focus-inner {
  border: 0;
}

.c1:focus {
  outline: none;
}

.c2 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #1e272e;
  background-color: #ffdd59;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
  margin: 5%;
}

.c2:hover {
  cursor: pointer;
  background-color: #f2d255;
}

.c2:focus {
  box-shadow: 0px 0px 0px 2px #f2d255;
}

.c2::-moz-focus-inner {
  border: 0;
}

.c2:focus {
  outline: none;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #1e272e;
  background-color: #ffdd59;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
  margin-top: 0.375rem;
}

.c3:hover {
  cursor: pointer;
  background-color: #f2d255;
}

.c3:focus {
  box-shadow: 0px 0px 0px 2px #f2d255;
}

.c3::-moz-focus-inner {
  border: 0;
}

.c3:focus {
  outline: none;
}

.c4 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #1e272e;
  background-color: #ffdd59;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
  margin-top: 32px;
}

.c4:hover {
  cursor: pointer;
  background-color: #f2d255;
}

.c4:focus {
  box-shadow: 0px 0px 0px 2px #f2d255;
}

.c4::-moz-focus-inner {
  border: 0;
}

.c4:focus {
  outline: none;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #1e272e;
  background-color: #ffdd59;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
  margin-top: 5%;
}

.c5:hover {
  cursor: pointer;
  background-color: #f2d255;
}

.c5:focus {
  box-shadow: 0px 0px 0px 2px #f2d255;
}

.c5::-moz-focus-inner {
  border: 0;
}

.c5:focus {
  outline: none;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #1e272e;
  background-color: #ffdd59;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
  margin-left: 0.375rem;
}

.c6:hover {
  cursor: pointer;
  background-color: #f2d255;
}

.c6:focus {
  box-shadow: 0px 0px 0px 2px #f2d255;
}

.c6::-moz-focus-inner {
  border: 0;
}

.c6:focus {
  outline: none;
}

.c7 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #1e272e;
  background-color: #ffdd59;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
  margin-left: 32px;
}

.c7:hover {
  cursor: pointer;
  background-color: #f2d255;
}

.c7:focus {
  box-shadow: 0px 0px 0px 2px #f2d255;
}

.c7::-moz-focus-inner {
  border: 0;
}

.c7:focus {
  outline: none;
}

.c8 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #1e272e;
  background-color: #ffdd59;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
  margin-left: 5%;
}

.c8:hover {
  cursor: pointer;
  background-color: #f2d255;
}

.c8:focus {
  box-shadow: 0px 0px 0px 2px #f2d255;
}

.c8::-moz-focus-inner {
  border: 0;
}

.c8:focus {
  outline: none;
}

.c9 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #1e272e;
  background-color: #ffdd59;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
  margin-bottom: 0.375rem;
}

.c9:hover {
  cursor: pointer;
  background-color: #f2d255;
}

.c9:focus {
  box-shadow: 0px 0px 0px 2px #f2d255;
}

.c9::-moz-focus-inner {
  border: 0;
}

.c9:focus {
  outline: none;
}

.c10 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #1e272e;
  background-color: #ffdd59;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
  margin-bottom: 32px;
}

.c10:hover {
  cursor: pointer;
  background-color: #f2d255;
}

.c10:focus {
  box-shadow: 0px 0px 0px 2px #f2d255;
}

.c10::-moz-focus-inner {
  border: 0;
}

.c10:focus {
  outline: none;
}

.c11 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #1e272e;
  background-color: #ffdd59;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
  margin-bottom: 5%;
}

.c11:hover {
  cursor: pointer;
  background-color: #f2d255;
}

.c11:focus {
  box-shadow: 0px 0px 0px 2px #f2d255;
}

.c11::-moz-focus-inner {
  border: 0;
}

.c11:focus {
  outline: none;
}

.c12 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #1e272e;
  background-color: #ffdd59;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
  margin-right: 0.375rem;
}

.c12:hover {
  cursor: pointer;
  background-color: #f2d255;
}

.c12:focus {
  box-shadow: 0px 0px 0px 2px #f2d255;
}

.c12::-moz-focus-inner {
  border: 0;
}

.c12:focus {
  outline: none;
}

.c13 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #1e272e;
  background-color: #ffdd59;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
  margin-right: 32px;
}

.c13:hover {
  cursor: pointer;
  background-color: #f2d255;
}

.c13:focus {
  box-shadow: 0px 0px 0px 2px #f2d255;
}

.c13::-moz-focus-inner {
  border: 0;
}

.c13:focus {
  outline: none;
}

.c14 {
  display: inline-block;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25;
  color: #1e272e;
  background-color: #ffdd59;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  text-align: center;
  vertical-align: middle;
  padding: .375em .75em;
  margin-right: 5%;
}

.c14:hover {
  cursor: pointer;
  background-color: #f2d255;
}

.c14:focus {
  box-shadow: 0px 0px 0px 2px #f2d255;
}

.c14::-moz-focus-inner {
  border: 0;
}

.c14:focus {
  outline: none;
}

<div>
  <button
    className="c0"
    color="primary"
  />
  <button
    className="c1"
    color="primary"
  />
  <button
    className="c2"
    color="primary"
  />
  <button
    className="c3"
    color="primary"
  />
  <button
    className="c4"
    color="primary"
  />
  <button
    className="c5"
    color="primary"
  />
  <button
    className="c6"
    color="primary"
  />
  <button
    className="c7"
    color="primary"
  />
  <button
    className="c8"
    color="primary"
  />
  <button
    className="c9"
    color="primary"
  />
  <button
    className="c10"
    color="primary"
  />
  <button
    className="c11"
    color="primary"
  />
  <button
    className="c12"
    color="primary"
  />
  <button
    className="c13"
    color="primary"
  />
  <button
    className="c14"
    color="primary"
  />
</div>
`;
